--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "levraoueg-backend",
+  "name": "my-cultural-property-backend",
   "version": "1.0.0",
   "main": "server.js",
   "author": "Eri Schon <erischon@gmail.com>",
