--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Eri Schon <erischon@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cloudinary": "^1.30.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.0"
