--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "my-cultural-property-backend",
+  "name": "my-cbookcase-backend",
   "version": "1.0.0",
   "main": "server.js",
   "author": "Eri Schon <erischon@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "cloudinary": "^1.30.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.0"
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seeder": "node utils/seeder"
   }
 }
